--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
         <item>Model X</item>
         <item>Model Y</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
