--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
         <item>Model Y</item>
     </string-array>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_add_car">AddCarActivity</string>
 </resources>
